# bloom-demo

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py  models.py
backend/app/data/: clinical_guidelines.json  ingest.py
backend/app/data/pipeline/: medlineplus.py  openfda.py  pubmed.py  runner.py
backend/app/ml/: urgency_classifier.py  urgency_model.joblib
backend/app/services/: audit.py  chat.py  eval.py  guardrails.py  icd10.py  memory.py  prompts.py  rag.py  recommendations.py  sessions.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentPanel.tsx  App.tsx  AuditLog.tsx  AuthGate.tsx  CareJourney.tsx  ChatMessage.tsx  GuardrailInspector.tsx  ICD10Panel.tsx  Icons.tsx  MemoryPanel.tsx  MetricsPanel.tsx  PromptPlayground.tsx  RAGVisualizer.tsx  RecommendationPanel.tsx  ScenarioBar.tsx  SearchPanel.tsx  UrgencyBadge.tsx
frontend/src/lib/: api.ts  types.ts
